# 1C_IndustrialProgramming

Homeworks/BigHomework_01/PythonVirtualMachine/: random_program.py  virtual_machine.py
Homeworks/BigHomework_01/PythonVirtualMachine/tests/: test_simple.py
Homeworks/BigHomework_01/PythonVirtualMachine/tests/.pytest_cache/v/cache/: lastfailed  nodeids
Homeworks/Homework_01/: mail.txt  word_count.sh  word_count_reducer.awk
Homeworks/Homework_03/OpenCV/: CMakeCache.txt  CMakeLists.txt  DisplayImage.cpp
Homeworks/Homework_04/: CMakeLists.txt  colors.h  colors_generator.py  main.cpp
Homeworks/Homework_05/: main.cpp  test.cpp
Homeworks/Homework_05/include/: listdir.h
Homeworks/Homework_05/src/: CMakeLists.txt  listdir.cpp
